# Vendor-NXP-PlugAndTrust

./: .gitmodules  CMakeLists.txt  fsl_sss_ftr.h
ext/: CMakeLists.txt
hostlib/hostLib/: CMakeLists.txt
hostlib/hostLib/libCommon/: CMakeLists.txt
hostlib/hostLib/libCommon/log/: CMakeLists.txt
hostlib/hostLib/se05x/: CMakeLists.txt
sss/: CMakeLists.txt
